{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 301,
  "lineage": "8679401e-4055-25a1-44c7-f574e3e99c33",
  "resources": [
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-0b6b9e31eb5cb3d59",
            "description": "EmrManagedMasterSecurityGroup",
            "egress": [],
            "id": "sg-0b6b9e31eb5cb3d59",
            "ingress": [],
            "name": "default-prod-aml-emr-emr-master-managed",
            "name_prefix": "",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "master-managed",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "master-managed",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-034d05f6211c9d844",
            "description": "EmrManagedSlaveSecurityGroup",
            "egress": [],
            "id": "sg-034d05f6211c9d844",
            "ingress": [],
            "name": "default-prod-aml-emr-emr-slave-managed",
            "name_prefix": "",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "slave-managed",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "slave-managed",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-0eb743506ff51f306",
            "description": "Allow inbound traffic from Security Groups and CIDRs for masters. Allow all outbound traffic",
            "egress": [],
            "id": "sg-0eb743506ff51f306",
            "ingress": [],
            "name": "default-prod-aml-emr-emr-master",
            "name_prefix": "",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "master",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "master",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-0f0ab73d921eea62f",
            "description": "Allow inbound traffic from Security Groups and CIDRs for slaves. Allow all outbound traffic",
            "egress": [],
            "id": "sg-0f0ab73d921eea62f",
            "ingress": [],
            "name": "default-prod-aml-emr-emr-slave",
            "name_prefix": "",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": true,
            "tags": {
              "Attributes": "slave",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Attributes": "slave",
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Stage": "prod",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "managed_master_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3457020067",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b6b9e31eb5cb3d59",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.managed_master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "managed_slave_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2225982269",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-034d05f6211c9d844",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.managed_slave",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1923964545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb743506ff51f306",
            "security_group_rule_id": "sgr-0cd0cce4b308325a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.master",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from Security Groups",
            "from_port": 0,
            "id": "sgrule-3133710900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eb743506ff51f306",
            "security_group_rule_id": "sgr-0ed9a583cdde2fbd2",
            "self": false,
            "source_security_group_id": "sg-02d84989e86fe3696",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.master",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "slave_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-50523925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0ab73d921eea62f",
            "security_group_rule_id": "sgr-091ab849884eb10db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.slave",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.emr_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "slave_ingress_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from Security Groups",
            "from_port": 0,
            "id": "sgrule-4200201932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0ab73d921eea62f",
            "security_group_rule_id": "sgr-0826538df5c1c02fc",
            "self": false,
            "source_security_group_id": "sg-02d84989e86fe3696",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.emr_cluster.aws_security_group.slave",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-02d84989e86fe3696",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [],
            "id": "sg-02d84989e86fe3696",
            "ingress": [],
            "name": "user-service-20240229162720023200000006",
            "name_prefix": "user-service-",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user-service"
            },
            "tags_all": {
              "Name": "user-service"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3614389776",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02d84989e86fe3696",
            "security_group_rule_id": "sgr-0be33644082b8548b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-1939033171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02d84989e86fe3696",
            "security_group_rule_id": "sgr-0ddd0da8f4c216d46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-1841383836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02d84989e86fe3696",
            "security_group_rule_id": "sgr-0c74c756ce761b255",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:network-acl/acl-02fdce692f28c7420",
            "default_network_acl_id": "acl-02fdce692f28c7420",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02fdce692f28c7420",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397742563",
            "subnet_ids": [
              "subnet-022a3818a74913b21",
              "subnet-02b285b6d27357760",
              "subnet-0c0468f032c6755f8",
              "subnet-0c4dc3b373d7807cc",
              "subnet-0e1ee5abc73b5e3fe",
              "subnet-0f671e767507da90d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:security-group/sg-052d5a4542be476e2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052d5a4542be476e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397742563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-managed",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-managed",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea3f0079a30597de",
            "domain": "vpc",
            "id": "eipalloc-0ea3f0079a30597de",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-243-7-70.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.243.7.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:internet-gateway/igw-0c5479951be4a8f06",
            "id": "igw-0c5479951be4a8f06",
            "owner_id": "767397742563",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea3f0079a30597de",
            "association_id": "eipassoc-0e82d74231b22a960",
            "connectivity_type": "public",
            "id": "nat-012a7b93873d84ffc",
            "network_interface_id": "eni-0787ec761785054b7",
            "private_ip": "10.0.101.205",
            "public_ip": "34.243.7.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c0468f032c6755f8",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e8c6eec5858fe781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012a7b93873d84ffc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e8c6eec5858fe78",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5479951be4a8f06",
            "id": "r-rtb-05c4871f9d48b63d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c4871f9d48b63d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:route-table/rtb-02e8c6eec5858fe78",
            "id": "rtb-02e8c6eec5858fe78",
            "owner_id": "767397742563",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:route-table/rtb-05c4871f9d48b63d7",
            "id": "rtb-05c4871f9d48b63d7",
            "owner_id": "767397742563",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a285360436539e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040ca681b019d2100",
            "route_table_id": "rtb-02e8c6eec5858fe78",
            "subnet_id": "subnet-022a3818a74913b21"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048166a50f0f0b3a3",
            "route_table_id": "rtb-02e8c6eec5858fe78",
            "subnet_id": "subnet-0f671e767507da90d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2d82a9cb3f4a39e",
            "route_table_id": "rtb-02e8c6eec5858fe78",
            "subnet_id": "subnet-0c4dc3b373d7807cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac38b3914b98b9e5",
            "route_table_id": "rtb-05c4871f9d48b63d7",
            "subnet_id": "subnet-0c0468f032c6755f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a04857cf2fd5c7d",
            "route_table_id": "rtb-05c4871f9d48b63d7",
            "subnet_id": "subnet-0e1ee5abc73b5e3fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1563fc01d429a7",
            "route_table_id": "rtb-05c4871f9d48b63d7",
            "subnet_id": "subnet-02b285b6d27357760"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-022a3818a74913b21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022a3818a74913b21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-0f671e767507da90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f671e767507da90d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-0c4dc3b373d7807cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4dc3b373d7807cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-0c0468f032c6755f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0468f032c6755f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-0e1ee5abc73b5e3fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ee5abc73b5e3fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:subnet/subnet-02b285b6d27357760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b285b6d27357760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397742563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06a285360436539e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767397742563:vpc/vpc-06a285360436539e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fdce692f28c7420",
            "default_route_table_id": "rtb-039702535b8fec1d6",
            "default_security_group_id": "sg-052d5a4542be476e2",
            "dhcp_options_id": "dopt-05321f102b7c30708",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a285360436539e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039702535b8fec1d6",
            "owner_id": "767397742563",
            "tags": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aml-emr",
              "Namespace": "default",
              "Resource": "DATA-EMR",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}